Adding cloudbuild stuff Migrating back to java8 as there's no out of the box cloud-builder for java9 yet Cleanup useless dependencies